--- a/docs/05-Probability/notebooks/empirical.qmd
+++ b/docs/05-Probability/notebooks/empirical.qmd
@@ -28,9 +28,12 @@ The *empirical cumulative distribution* (ECDF) shows, for each value $a$ of a ra
 
 
 ```{r}
-hist<-ggplot(data=adelie)+geom_histogram(aes(x=`bill_length_mm`,y=after_stat(density)),binwidth=.2,color='white',fill='blue',alpha=.5)+
-labs(x="Bill Length (mm)",y="Density", title="Histogram")
-ecdf <-ggplot(data=adelie)+stat_ecdf(aes(x=`bill_length_mm`),color='red')+labs(x="Bill Length (mm)",y="Cumulative Density", title="ECDF")
+hist <- ggplot(data = adelie) +
+    geom_histogram(aes(x = `bill_length_mm`, y = after_stat(density)), binwidth = .2, color = "white", fill = "blue", alpha = .5) +
+    labs(x = "Bill Length (mm)", y = "Density", title = "Histogram")
+ecdf <- ggplot(data = adelie) +
+    stat_ecdf(aes(x = `bill_length_mm`), color = "red") +
+    labs(x = "Bill Length (mm)", y = "Cumulative Density", title = "ECDF")
 
 grid.arrange(hist, ecdf, ncol = 2)
 ```
@@ -41,15 +44,18 @@ grid.arrange(hist, ecdf, ncol = 2)
 ## QQ plot
 
 ```{r}
-ggplot(data=adelie)+stat_qq(aes(sample=`bill_length_mm`))+
-    labs(title="QQ plot for Bill Length (mm)")
+ggplot(data = adelie) +
+    stat_qq(aes(sample = `bill_length_mm`)) +
+    labs(title = "QQ plot for Bill Length (mm)")
 ```
 
 ```{r}
 show <- function(data, column) {
-    hist<-ggplot(data=data)+geom_histogram(aes(x={{column}},y=after_stat(density)),binwidth=.2,color='white',fill='blue',alpha=.5)
-    ecdf <-ggplot(data=data)+stat_ecdf(aes(x={{column}}),color='red')
-    return(list(hist,ecdf))
+    hist <- ggplot(data = data) +
+        geom_histogram(aes(x = {{ column }}, y = after_stat(density)), binwidth = .2, color = "white", fill = "blue", alpha = .5)
+    ecdf <- ggplot(data = data) +
+        stat_ecdf(aes(x = {{ column }}), color = "red")
+    return(list(hist, ecdf))
 }
-grid.arrange(grobs=show(adelie,bill_length_mm),ncol=1)
+grid.arrange(grobs = show(adelie, bill_length_mm), ncol = 1)
 ```
