working on power

--- a/docs/04-StatBasics/stat-basics.qmd
+++ b/docs/04-StatBasics/stat-basics.qmd
@@ -392,8 +392,27 @@ But suppose we did 50 flips? Then the one- and two-sided limits are slightly dif
 rejection2(50,1)
 ```
 ```{r}
-rejection1(50,1)
+rejection1(50, 1)
 ```
+
+## Normal approximation
+
+For large $n$, the binomial distribution distribution with probability $p$ becomes
+a version of the normal distribution with mean $Np$ and standard deviation $\sqrt{Np(1-p)}$.
+
+```{r}
+compare <- function(n, p = .5) {
+    results <- data.frame(x = seq(0, n), y = dbinom(seq(0, n), n, p), z = dnorm(seq(0, n), mean = p * n, sd = sqrt(n * p * (1 - p))))
+    ggplot(data = results) +
+        geom_bar(aes(x = x, y = y), stat = "identity", fill = "lightgreen") +
+        geom_line(aes(x = x, y = z), color = "red", size = 2) +
+        ggtitle(glue("Normal Approximation to the binomial with n={n} and p={p}"))
+}
+compare(100, .3)
+```
+
+So one can use the normal distribution to determine the rejection region if $n$ is large.
+
 ## Errors
 
 Two things can go wrong:
@@ -406,6 +425,57 @@ you've *missed* an actual effect. This is called $\beta$. Typically, if you
 make $\alpha$ smaller (thus reducing the chance of a Type I error) you make
 $\beta$ bigger (increasing the chance of a type II error). 
 
+## Statistical Power
+
+Informally, statistical power measures the ability of an experiment to detect a real effect.  If a study has high power, then you are very unlikely to make a Type II error.
+
+For example, return to the coin flipping problem (or the A/B testing problem).
+
+Suppose we flip our coin $20$ times and our null hypothesis is that $p=.5$ 
+If our significance level is $.05$, we will reject the null hypothesis and conclude
+that the coin is *not* fair (and biased towards heads) provided we get $15$ or more  heads.  
+
+```{r}
+# look at the probability density for this case
+probs <- dbinom(seq(0, 20), 20, .5)
+# The qbinom function tells us the threshold
+rejection <- qbinom(.95, 20, .5)
+# We check this by comparing the probability of $15-20$ vs $14-20$ heads:
+sum(probs[16:21]) # remember probs[i] is the chance of i-1 heads
+sum(probs[15:21])
+# The chance of $15-20$ heads is greater than $.05$.
+```
+
+Now suppose the coin is *not* fair and $p=.6$.  What is the chance that we *accept* the null hypothesis and conclude, falsely, that the coin is fair?  It is the chance
+that we get $14$ or fewer heads when $p=.6$.
+
+```{r}
+probs6 <- dbinom(seq(0, 20), 20, .6)
+sum(probs6[1:15])
+```
+
+This is $87$ percent!  In other words, our experiment is very *unlikely* to detect
+the unfairness of the coin if the unfairness is only the difference between $p=.6$ and
+$p=.5$
+
+But if the coin is *very* unfair, with, say $p=.8$, then we find:
+
+```{r}
+probs8 <- dbinom(seq(0, 20), 20, .8)
+sum(probs8[1:15])
+```
+
+We have only a 20% chance of a Type II error so there's an 80% chance we'll detect the problem.
+
+Now suppose we use $100$ flips.
+
+```{r}
+rejection <- qbinom(.95, 100, .5)
+probs6 <- dbinom(seq(0, 100), 100, .6)
+sum(probs6[1:rejection])
+```
+
+Now we have a 70% chance of detecting the difference unfairness of $p=.6$.
 <!--
 some things to talk about:
 fisher exact test  (likelihood of results at random)
