--- a/docs/04-StatBasics/stat-basics.qmd
+++ b/docs/04-StatBasics/stat-basics.qmd
@@ -5,6 +5,9 @@ author: "Jeremy Teitelbaum"
 format: html
 title-block-style: plain
 ---
+```{r echo=FALSE}
+library(glue)
+```
 
 # Populations and Samples
 
