some stats stuff

--- a/docs/04-StatBasics/stat-basics.qmd
+++ b/docs/04-StatBasics/stat-basics.qmd
@@ -479,6 +479,32 @@ sum(probs6[1:rejection])
 ```
 
 Now we have a 70% chance of detecting the difference unfairness of $p=.6$.
+
+# An AB example
+
+Baseline situation: We show two different web ads to customers at random, and measure
+how often the visitor clicks through the ad.
+
+Of the 4800 who see ad A, 975 click through.
+Of the 4600 who see ad B, 1133 click through.
+
+Is Ad B better than Ad A or is this explained by chance?
+
+Null hypothesis: the two ads are the same, and of the 9400 who see an ad, 2108 click through.
+This is a probabiility of 22.4%.
+
+The .95 quantile for the binomial distribution with n=4600 and p=.224 is 1077.  Thus the 1133 click through
+rate is significantly higher.  Similarly the 975 out of 4800 is significantly lower.
+
+So ad B is better than ad A at the .05 significance level.  In fact the odds of getting a number as high as 1133 is more like 1
+in 10^4 so the evidence for ad b is overwhelming.
+
+By simulation:
+```{r}
+simulated <- rbinom(10000, 4600, .224)
+sum(simulated >= 1133)
+```
+
 <!--
 some things to talk about:
 fisher exact test  (likelihood of results at random)
