--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,3 @@
 # Fundamentals of Machine Learning
 
-1. [Setting Up](chapters/01-SettingUp/setting-up.html)
-2. [Jupyter and Python Basics](chapters/02-JupyterBasics/jupyter-walkthrough.html)
-3. [R Basics](chapters/03-RBasics/r-walkthrough.html)
-4. [Stat Basics](chapters/04-StatBasics/stat-basics.html)
-
+This site contains resources for UConn's "Fundamentals of Machine Learning" Course.
