more on calculus

--- a/notes/08-Calculus/calculus.qmd
+++ b/notes/08-Calculus/calculus.qmd
@@ -406,7 +406,8 @@ $$
 
 where $\theta$ is the angle between the gradient and the vector $v$.  This is maximum when $\theta=0$, and minimum when $\theta=\pi$.
 
-To see the significance of this, check out [this page.](./GDanimate_js.html).
+To see the significance of this, check out [this page](./GDanimate_js.html).  If you click on
+a point, the red line traces out a path along the (negative) gradient.
 
 ## Functions from $\mathbf{R}^{m}$ to $\mathbf{R}^{n}$ and their derivatives
 
