updating published version

--- a/notes/02-JupyterWalkthrough/02-jupyter-walkthrough.qmd
+++ b/notes/02-JupyterWalkthrough/02-jupyter-walkthrough.qmd
@@ -2,7 +2,7 @@
 title: "Jupyter Lab Project Walkthrough"
 subtitle: "Fundamentals of Data Science"
 author: "Jeremy Teitelbaum"
-format: revealjs
+format: html
 title-block-style: plain
 ---
 
