updating published version

--- a/index.qmd
+++ b/index.qmd
@@ -26,7 +26,7 @@ through the UConn Library.
 -   [Programming Bootcamp (python)](https://justinbois.github.io/bootcamp/2021/) These are notes from a programming bootcamp at Caltech. It is very
     well done and comprehensive and covers more than we will do in this course.
 -   [Programming Bootcamp (R)](https://gitfront.io/r/user-3679719/H8v5hTnvHh2U/R-Bootcamp-Course/)  These are notes developed at UConn by Chiranjit Dutta,
-one of Professor Ravishanker's students.
+one of Professor Ravishanker's students.  For a more usable zip file of the Rmd code and the data files, use [this link](R_bootcamp.zip).
 -   [An Introduction to Statistical Learning](http://www.statlearning.com) by James, *et. al.* Note that
     the original version of this book uses the R language, but a new
     edition available in Summer 2023 uses Python.
