--- a/notes/06-PythonAndR/in_class/pythonAndR.qmd
+++ b/notes/06-PythonAndR/in_class/pythonAndR.qmd
@@ -38,8 +38,10 @@ In addition, both R and Python have plotting libraries that rely on dataframes/t
 
 ## Walkthroughs
 
+- [R/basics of R programming](r_programming.qmd)
+- [R/tidyverse walkthrough](r_penguins.qmd)
 - [Python/basics of python programming](python_programming.qmd)
 - [Python/pandas walkthrough](pandas_penguins.qmd)
-- [R/tidyverse walkthrough](r_penguins.qmd)
+
 
 
